syntax = "proto3";

package com.example;

import "akkaserverless/entity_key.proto";

message Example {
    string field1 = 1;
    string field2 = 2;
}

message PrimitiveLike {
    string field1 = 1;
    string field2 = 2;
    string field15 = 15;
}

message In {
    string field = 1 [(.akkaserverless.entity_key) = true];
}

message Out {
    string field = 1;
}

service ExampleService {
    rpc DoSomething(In) returns (Out);
    rpc StreamSomething(In) returns (stream Out);
}